<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spanik.deliver.SignUpActivity">

    <LinearLayout
        android:id="@+id/signUpLinearLayout"
        style="@style/AuthFieldContainer"
        >

        <EditText android:id="@+id/fullNameSignUpEditText"
            android:hint="@string/fullNameSignUp"
            android:inputType="text"
            style="@style/AuthEditText"
            />

        <EditText android:id="@+id/emailSignUpEditText"
            android:hint="@string/emailSignUp"
            android:inputType="textEmailAddress"
            style="@style/AuthEditText"
            />

        <EditText android:id="@+id/passwordSignUpEditText"
            android:hint="@string/passwordSignUp"
            android:inputType="textPassword"
            style="@style/AuthEditText"
            />

        <EditText android:id="@+id/confirmPwdSignUpEditText"
            android:hint="@string/confirmPwdSignUp"
            android:inputType="textPassword"
            style="@style/AuthEditText"
            />

        <EditText android:id="@+id/addressSignUpEditText"
            android:hint="@string/addressSignUp"
            android:inputType="text"
            style="@style/AuthEditText"
            />

        <EditText android:id="@+id/citySignUpEditText"
            android:hint="@string/citySignUp"
            android:inputType="text"
            style="@style/AuthEditText"
            />

        <EditText android:id="@+id/zipSignUpEditText"
            android:hint="@string/zipSignUp"
            android:inputType="text"
            style="@style/AuthEditText"
            />

        <EditText android:id="@+id/phoneSignUpEditText"
            android:hint="@string/phoneSignUp"
            android:inputType="number"
            style="@style/AuthEditText"
            />

    </LinearLayout>

    <Button android:id="@+id/signUpButton"
        android:text="@string/signup_button"
        android:onClick="signUp"
        style="@style/AuthButton"

        android:layout_below="@+id/signUpLinearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
