<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spanik.deliver.OrderActivity">

    <LinearLayout
        android:id="@+id/createOrderLinearLayout"
        style="@style/AuthFieldContainer"
    >

        <EditText android:id="@+id/categoryEditText"
            android:hint="@string/category"
            android:inputType="text"
            style="@style/AuthEditText"
        />

        <EditText android:id="@+id/sourcEditText"
            android:hint="@string/source"
            android:inputType="text"
            style="@style/AuthEditText"
            />

        <EditText android:id="@+id/deliveryAddressEditText"
            android:hint="@string/deliveryAddress"
            android:inputType="text"
            style="@style/AuthEditText"
            />

        <EditText android:id="@+id/amountEditText"
            android:hint="@string/amount"
            android:inputType="number"
            style="@style/AuthEditText"
            />

        <EditText android:id="@+id/detailsEditText"
            android:hint="@string/details"
            android:inputType="text"
            style="@style/AuthEditText"
            />

    </LinearLayout>

    <Button android:id="@+id/createOrderBtn"
        android:text="@string/create_order_button"
        android:onClick="createOrder"
        style="@style/AuthButton"

        />

</RelativeLayout>
