<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spanik.deliver.MainActivity">

    <LinearLayout
        android:id="@+id/loginLinearLayout"
        style="@style/AuthFieldContainer"

        >

        <EditText android:id="@+id/userEmailEditText"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            style="@style/AuthEditText"


            />

        <EditText android:id="@+id/userPasswordEditText"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AuthEditText"

            />



    <Button android:id="@+id/loginButton"
        android:text="@string/login_button"
        android:onClick="login"
        style="@style/AuthButton"
        />

    <Button android:id="@+id/navToSignupButton"
        android:text="@string/navToSignupButton"
        android:onClick="navigateToSignUp"
        style="@style/AuthButton"
        />

    </LinearLayout>
</RelativeLayout>
